# L-UQ

./: .gitignore  CDF_l.m  CHANGELOG.md  CITATION.cff  Identify_dist.m  Identify_dist_bootstrap.m  LICENSE  PDF_l.m  Parameter_estimation.m  README.md  Random_l.m  code_metadata.md  demo_example.m  fit_best.m  lhsgeneral.m  package_toolbox.m
.github/workflows/: ci.yml  publish.yml
python/: .gitignore  README.md  app.py  demo_example.py  pyproject.toml  requirements.txt
python/lmoments/: __init__.py  distributions.py  divergence.py  identify.py  lmoments.py  parameters.py
python/lmoments_uq/: __init__.py  divergence.py  parameters.py
python/tests/: test_lmoments.py
tests/: octave_verify.m  test_uq_matlab.m
